--- a/config/playground/demo/observability/otel_demo/configmap.yaml
+++ b/config/playground/demo/observability/otel_demo/configmap.yaml
@@ -3,12 +3,29 @@ data:
   data-prepper-config: |
     ssl: false
   data-prepper-pipeline: |
+    otel-logs-pipeline:
+      workers: 5
+      delay: 10
+      source:
+        otel_logs_source:
+          ssl: false
+      buffer:
+        bounded_blocking:
+      sink:
+        - opensearch:
+            hosts: [ "https://opensearch-cluster-leader.default.svc:9200" ]
+            insecure: true
+            username: "admin"
+            password: "neoplay_2010_OPS"
+            index_type: custom
+            index: otel-events-%{yyyy.MM.dd}
+            bulk_size: 4
+    
     entry-pipeline:
       delay: "100"
       source:
         otel_trace_source:
           ssl: false
-          record_type: event
       sink:
         - pipeline:
             name: "raw-pipeline"
@@ -22,7 +39,7 @@ data:
         - otel_trace_raw:
       sink:
         - opensearch:
-            hosts: [ "https://opensearch-cluster-leader:9200" ]
+            hosts: [ "https://opensearch-cluster-leader.default.svc:9200" ]
             insecure: true
             username: "admin"
             password: "neoplay_2010_OPS"
@@ -36,11 +53,37 @@ data:
         - service_map_stateful:
       sink:
         - opensearch:
-            hosts: ["https://opensearch-cluster-leader:9200"]
+            hosts: [ "https://opensearch-cluster-leader.default.svc:9200" ]
             insecure: true
             username: "admin"
             password: "neoplay_2010_OPS"
             index_type: trace-analytics-service-map
+    otel-metrics-pipeline:
+      workers: 8
+      delay: 3000
+      source:
+        otel_metrics_source:
+          health_check_service: true
+          ssl: false
+      buffer:
+        bounded_blocking:
+          buffer_size: 1024 # max number of records the buffer accepts
+          batch_size: 1024 # max number of records the buffer drains after each read
+      processor:
+        - otel_metrics:
+            calculate_histogram_buckets: true
+            calculate_exponential_histogram_buckets: true
+            exponential_histogram_max_allowed_scale: 10
+            flatten_attributes: false
+      sink:
+        - opensearch:
+            hosts: [ "https://opensearch-cluster-leader.default.svc:9200" ]
+            insecure: true
+            username: "admin"
+            password: "neoplay_2010_OPS"
+            index_type: custom
+            index: otel-metrics-%{yyyy.MM.dd}
+            bulk_size: 4
   otel-collector-config: |
     receivers:
       otlp:
