--- a/config/playground/helm/searchapps/helm-opensearch.yaml
+++ b/config/playground/helm/searchapps/helm-opensearch.yaml
@@ -724,6 +724,7 @@ securityConfig:
             - cluster:admin/opensearch/securityanalytics/findings/get
             - cluster:admin/opensearch/securityanalytics/alerts/get
             - cluster:admin/opensearch/securityanalytics/detector/get
+            - cluster:admin/opensearch/ql/datasources/read
             # For using sql join query
             - "indices:data/read/scroll*"
           index_permissions:
