--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -36,7 +36,7 @@ jobs:
   OS-OSD-Dev-Deployment:
     needs: Pre-Deployment
     if:  ${{ needs.Pre-Deployment.outputs.config_change_dev == 'true' }}
-    uses:  opensearch-project/dashboards-anywhere/.github/workflows/deployment-template.yml@main
+    uses:  opensearch-project/dashboards-anywhere/.github/workflows/deployment-template.yml@2023reinvent2
     with:
       helm-repo: https://opensearch-project.github.io/helm-charts/
       deploy-env: dev
@@ -48,6 +48,9 @@ jobs:
       ga-tracking-id: ${{ secrets.GA_TRACKING_ID }}
       kibanaserver: ${{ secrets.KIBANASERVER }}
       query_datasources_master_key: ${{ secrets.QUERY_DATASOURCES_MASTER_KEY }}
+      esnode_cert: ${{ secrets.ESNODE_CERT }}
+      esnode_key_cert: ${{ secrets.ESNODE_KEY_CERT }}
+      root_ca_cert: ${{ secrets.ROOT_CA_CERT }}
 
   OS-OSD-Prod-Deployment:
     needs: Pre-Deployment
