--- a/config/playground/helm/dev/helm-opensearch.yaml
+++ b/config/playground/helm/dev/helm-opensearch.yaml
@@ -714,6 +714,7 @@ securityConfig:
             - cluster:admin/opensearch/securityanalytics/findings/get
             - cluster:admin/opensearch/securityanalytics/alerts/get
             - cluster:admin/opensearch/securityanalytics/detector/get
+            - cluster:admin/opensearch/securityanalytics/logtype/search
             # For using sql join query
             - "indices:data/read/scroll*"
           index_permissions:
