--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -46,7 +46,10 @@ jobs:
       kube-config: ${{ secrets.KUBE_CONFIG_DATA_DEV }}
       ga-tracking-id: ${{ secrets.GA_TRACKING_ID }}
       kibanaserver: ${{ secrets.KIBANASERVER }}
-      query_datasources_master_key: ${{ secrets.QUERY_DATASOURCES_MASTER_KEY }}
+      esnode_cert: ${{ secrets.ESNODE_CERT }}
+      esnode_key_cert: ${{ secrets.ESNODE_KEY_CERT }}
+      root_ca_cert: ${{ secrets.ROOT_CA_CERT }}
+
 
   OS-OSD-Prod-Deployment:
     needs: Pre-Deployment
@@ -62,6 +65,9 @@ jobs:
       kube-config: ${{ secrets.KUBE_CONFIG_DATA_PROD }}
       kibanaserver: ${{ secrets.KIBANASERVER }}
       ga-tracking-id: ${{ secrets.GA_TRACKING_ID_PROD }}
+      esnode_cert: ${{ secrets.ESNODE_CERT }}
+      esnode_key_cert: ${{ secrets.ESNODE_KEY_CERT }}
+      root_ca_cert: ${{ secrets.ROOT_CA_CERT }}
 
   OS-OSD-ML-Deployment:
     needs: Pre-Deployment
