--- a/config/playground/helm/dev/helm-opensearch.yaml
+++ b/config/playground/helm/dev/helm-opensearch.yaml
@@ -28,9 +28,14 @@ majorVersion: "7"
 opensearchHome: /usr/share/opensearch
 # such as opensearch.yml
 config:
+  esnode.pem: |-
+${ESNODE_CERT}
+  esnode-key.pem: |-
+${ESNODE_KEY_CERT}
+  root-ca.pem: |-
+${ROOT_CA_CERT}
   opensearch.yml: |
     cluster.name: opensearch-cluster
-    plugins.query.datasources.encryption.masterkey: ${QUERY_DATASOURCES_MASTER_KEY}
     # Bind to all interfaces because we don't know what IP address Docker will assign to us.
     network.host: 0.0.0.0
     # # minimum_master_nodes need to be explicitly set when bound on a public IP
@@ -93,7 +98,7 @@ extraEnvs:
 #  - name: MY_ENVIRONMENT_VAR
 #    value: the_value_goes_here
   - name: DISABLE_INSTALL_DEMO_CONFIG
-    value: "false"
+    value: "true"
 
 # Allows you to load environment variables from kubernextes secret or config map
 envFrom: []
@@ -108,7 +113,7 @@ hostAliases: []
 image:
   repository: "opensearchproject/opensearch"
   # override image tag, which is .Chart.AppVersion by default
-  tag: ""
+  tag: "2.12.0"
   # Always/Never/IfNotPresent
   pullPolicy: "Always"
 
@@ -708,6 +713,7 @@ securityConfig:
             - cluster:admin/opensearch/securityanalytics/findings/get
             - cluster:admin/opensearch/securityanalytics/alerts/get
             - cluster:admin/opensearch/securityanalytics/detector/get
+            - cluster:admin/opensearch/securityanalytics/logtype/search
             # For using sql join query
             - "indices:data/read/scroll*"
           index_permissions:
