--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 # This should match the list of maintainers in https://github.com/orgs/opensearch-project/teams/dashboards-anywhere-team-maintainers
-*   @seraphjiang @zhongnansu @kristenTian @Flyingliuhub @BionIT @zengyan-amazon @himanshu1214
+*   @seraphjiang @Flyingliuhub @BionIT @zengyan-amazon
