--- a/config/playground/helm/preview/helm-opensearch.yaml
+++ b/config/playground/helm/preview/helm-opensearch.yaml
@@ -28,6 +28,12 @@ majorVersion: "7"
 opensearchHome: /usr/share/opensearch
 # such as opensearch.yml
 config:
+  esnode.pem: |-
+${ESNODE_CERT}
+  esnode-key.pem: |-
+${ESNODE_KEY_CERT}
+  root-ca.pem: |-
+${ROOT_CA_CERT}
   opensearch.yml: |
     cluster.name: opensearch-cluster
     # Bind to all interfaces because we don't know what IP address Docker will assign to us.
