--- a/config/playground/helm/searchapps/helm-opensearch.yaml
+++ b/config/playground/helm/searchapps/helm-opensearch.yaml
@@ -98,7 +98,7 @@ extraEnvs:
 #  - name: MY_ENVIRONMENT_VAR
 #    value: the_value_goes_here
   - name: DISABLE_INSTALL_DEMO_CONFIG
-    value: "false"
+    value: "true"
 
 # Allows you to load environment variables from kubernextes secret or config map
 envFrom: []
