Adding push trigger for newly added action
Signed-off-by: Tao Liu <liutaoaz@amazon.com>

--- a/.github/workflows/build-osd-image.yml
+++ b/.github/workflows/build-osd-image.yml
@@ -1,5 +1,7 @@
 name: Build-OSD-Image
 on: 
+    push:
+        branches: [ ec2-runner ]
     workflow_dispatch:
         inputs:
             python_version:
