Update trigger github
Signed-off-by: Tao Liu <liutaoaz@amazon.com>

--- a/.github/workflows/trigger-build-osd-image.yml
+++ b/.github/workflows/trigger-build-osd-image.yml
@@ -1,6 +1,8 @@
 name: Trigger OSD Build Image Workflow
 
 on:
+    push:
+        branches: [ ec2-runner ]
     workflow_dispatch:
         inputs:
             repository:
