--- a/config/playground/helm/future/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/future/helm-opensearch-dashboards.yaml
@@ -9,7 +9,7 @@ opensearchHosts: "https://opensearch-cluster-leader:9200"
 replicaCount: 2
 
 image:
-  repository: ${OSD_IMAGE_REPOSITORY}
+  repository: ${OSD_IMAGE_REPO}
   # override image tag, which is .Chart.AppVersion by default
   tag: ${OSD_IMAGE_TAG}
   pullPolicy: "Always"
