Update command to get pods
Signed-off-by: Tao Liu <liutaoaz@amazon.com>

--- a/.github/workflows/trigger-future-deploymnet.yml
+++ b/.github/workflows/trigger-future-deploymnet.yml
@@ -99,5 +99,5 @@ jobs:
           # of OS and OSD as it only takes 23 seconds for the process, will add
           # blue/green deployment later.
           command: |
-            kubectl get nodes
+            kubectl get pods
 
