--- a/.github/workflows/trigger-future-deploymnet.yml
+++ b/.github/workflows/trigger-future-deploymnet.yml
@@ -100,4 +100,5 @@ jobs:
           # blue/green deployment later.
           command: |
             kubectl get pods
+            kubectl config view
 
