--- a/.github/workflows/trigger-future-deploymnet.yml
+++ b/.github/workflows/trigger-future-deploymnet.yml
@@ -99,6 +99,5 @@ jobs:
           # of OS and OSD as it only takes 23 seconds for the process, will add
           # blue/green deployment later.
           command: |
-            kubectl get pods
-            kubectl config view
+            cat /github/workspace/kubeconfig
 
