--- a/.github/workflows/trigger-future-deployment.yml
+++ b/.github/workflows/trigger-future-deployment.yml
@@ -1,8 +1,6 @@
-name: OpenSearch and OpenSearch Dashboards Deployment Template
+name: Future Playground Deployment
 
 on:
-  push:
-    branches: [ ec2-runner ]
   workflow_dispatch:
     inputs:
       deploy_fresh:
@@ -88,8 +86,14 @@ jobs:
           # of OS and OSD as it only takes 23 seconds for the process, will add
           # blue/green deployment later.
           command: |
-            kubectl get nodes
+            helm uninstall opensearch --namespace default
+            helm uninstall dashboards --namespace default
+            kubectl get pvc | grep opensearch-cluster-leader-opensearch-cluster-leader- | awk '{print $1}'| xargs kubectl delete pvc
+            helm install opensearch opensearch/opensearch -f config/playground/helm/future/helm-opensearch.yaml
+            helm install dashboards opensearch/opensearch-dashboards -f config/playground/helm/future/helm-opensearch-dashboards.yaml
+
       - name: Upgrade Deploy OpenSearch/OpenSearch Dashboards By Helm Chart
+        if: ${{ inputs.deploy_upgrade }}
         uses: elastic-analytics/dashboards-action@main
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_PINK }}
@@ -99,5 +103,6 @@ jobs:
           # of OS and OSD as it only takes 23 seconds for the process, will add
           # blue/green deployment later.
           command: |
-            cat /github/workspace/kubeconfig
+            helm upgrade opensearch opensearch/opensearch -f config/playground/helm/future/helm-opensearch.yaml
+            helm upgrade dashboards opensearch/opensearch-dashboards -f config/playground/helm/future/helm-opensearch-dashboards.yaml
 
