--- a/config/playground/helm/dev/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/dev/helm-opensearch-dashboards.yaml
@@ -78,18 +78,18 @@ config:
     # Use the consolidated menu and global header bar
     opensearchDashboards.branding.useExpandedHeader: false
 
-    # home.hero.title: 'Try the Query Assistant'
-    # home.hero.body: 'Automatically generate complex queries using simple conversational prompts. AI assisted summary helps you navigate and understand errors from your logs.{br}{br}You will be redirected to the AI playground where you will need to login. All the {terms} of the playground still apply.'
-    # home.hero.externalActionButton: {
-    #   text: 'Login to try',
-    #   link: 'https://ai.playground.opensearch.org/'
-    # }
-    # home.hero.img.link: 'https://www.youtube.com/watch?v=VTiJtGI2Sr4'
+    home.hero.title: 'Try the Query Assistant'
+    home.hero.body: 'Automatically generate complex queries using simple conversational prompts. AI assisted summary helps you navigate and understand errors from your logs.{br}{br}You will be redirected to the AI playground where you will need to login. All the {terms} of the playground still apply.'
+    home.hero.externalActionButton: {
+      text: 'Login to try',
+      link: 'https://ai.playground.opensearch.org/'
+    }
+    home.hero.img.link: 'https://www.youtube.com/watch?v=VTiJtGI2Sr4'
 
     uiSettings:
       overrides:
         "theme:next": true
-        "theme:darkMode": true
+        "home:useNewHomePage": true
 
     data_source.enabled: true
     data_source.endpointDeniedIPs: [
@@ -117,17 +117,6 @@ config:
         'ff00::/8',
        ]
 
-    # Set enabled to false to hide the authentication method from multiple data source in OpenSearch Dashboards.
-    # If this setting is commented out, then all three options will be available in OpenSearch Dashboards.
-    # The default value will be considered as true.
-    data_source.authTypes:
-       NoAuthentication:
-         enabled: true
-       UsernamePassword:
-         enabled: true
-       AWSSigV4:
-         enabled: false
-    data_source.hideLocalCluster: true
     #Content security policy(csp) settings
     csp.rules: [ "connect-src 'self' www.google-analytics.com vectors.maps.opensearch.org tiles.maps.opensearch.org maps.opensearch.org;" ]
     csp.warnLegacyBrowsers: false
@@ -204,4 +193,4 @@ extraObjects: []
 # specify the external plugins to install.
 plugins:
   enabled: true
-  installList: ["https://github.com/BionIT/google-analytics-plugin/releases/download/2.13.0/googleAnalytics-2.13.0.zip"]
+  installList: ["https://github.com/BionIT/google-analytics-plugin/releases/download/2.13.0/googleAnalytics-2.13.0.zip", "https://github.com/Flyingliuhub/gademo/releases/download/2.13/queryAssistHero-2.13.zip"]
