--- a/config/playground/helm/dev/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/dev/helm-opensearch-dashboards.yaml
@@ -89,7 +89,7 @@ config:
     uiSettings:
       overrides:
         "theme:next": true
-        "home:useNewHomePage": true
+        "theme:darkMode": true
 
     data_source.enabled: true
     data_source.endpointDeniedIPs: [
