--- a/config/playground/helm/dev/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/dev/helm-opensearch-dashboards.yaml
@@ -78,13 +78,6 @@ config:
     # Use the consolidated menu and global header bar
     opensearchDashboards.branding.useExpandedHeader: false
 
-    # home.hero.title: 'Try the Query Assistant'
-    # home.hero.body: 'Automatically generate complex queries using simple conversational prompts. AI assisted summary helps you navigate and understand errors from your logs.{br}{br}You will be redirected to the AI playground where you will need to login. All the {terms} of the playground still apply.'
-    # home.hero.externalActionButton: {
-    #   text: 'Login to try',
-    #   link: 'https://ai.playground.opensearch.org/'
-    # }
-    # home.hero.img.link: 'https://www.youtube.com/watch?v=VTiJtGI2Sr4'
 
     uiSettings:
       overrides:
@@ -193,4 +186,4 @@ extraObjects: []
 # specify the external plugins to install.
 plugins:
   enabled: true
-  installList: ["https://github.com/BionIT/google-analytics-plugin/releases/download/2.13.0/googleAnalytics-2.13.0.zip"]
+  installList: ["https://github.com/BionIT/google-analytics-plugin/releases/download/2.13.0/googleAnalytics-2.13.0.zip", "https://github.com/Flyingliuhub/queryAssistHero/releases/download/2.13.0/queryAssistHero-2.13.0.zip"]
