support 2.13.0 in prod
Signed-off-by: Tianle Huang <tianleh@amazon.com>

--- a/config/playground/helm/prod/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/prod/helm-opensearch-dashboards.yaml
@@ -9,9 +9,9 @@ opensearchHosts: "https://opensearch-cluster-leader:9200"
 replicaCount: 3
 
 image:
-  repository: "opensearchplayground/opensearch-dashboards"
+  repository: "peterzhuamazon/opensearch-dashboards"
   # override image tag, which is .Chart.AppVersion by default
-  tag: "2.12.0"
+  tag: "2.13.0-special"
   # Always/Never/IfNotPresent
   pullPolicy: "Always"
 
@@ -194,4 +194,4 @@ extraObjects: []
 # specify the external plugins to install
 plugins:
   enabled: true
-  installList: ["https://github.com/BionIT/google-analytics-plugin/releases/download/2.12.0/googleAnalytics-2.12.0.zip"]
+  installList: ["https://github.com/BionIT/google-analytics-plugin/releases/download/2.13.0/googleAnalytics-2.13.0.zip"]
