include previous setting name
Signed-off-by: Kawika Avilla <kavilla414@gmail.com>

--- a/config/playground/helm/future/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/future/helm-opensearch-dashboards.yaml
@@ -161,6 +161,7 @@ config:
         "theme:next": true
         "theme:darkMode": false
         "query:enhancements:enabled": true
+        "query:dataSourceReadOnly": false
         "query:dataSource:readOnly": false
 
 priorityClassName: ""
