--- a/config/playground/helm/prod/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/prod/helm-opensearch-dashboards.yaml
@@ -9,9 +9,9 @@ opensearchHosts: "https://opensearch-cluster-leader:9200"
 replicaCount: 3
 
 image:
-  repository: "public.ecr.aws/y0r0d3v8/actionrunner"
+  repository: "opensearchproject/opensearch-dashboards"
   # override image tag, which is .Chart.AppVersion by default
-  tag: "2.14.0-9084337273"
+  tag: "2.15.0"
   # Always/Never/IfNotPresent
   pullPolicy: "Always"
 
@@ -185,4 +185,4 @@ extraObjects: []
 # specify the external plugins to install
 plugins:
   enabled: true
-  installList: ["https://github.com/BionIT/google-analytics-plugin/releases/download/2.14.0/googleAnalytics-2.14.0.zip"]
+  installList: ["https://github.com/BionIT/google-analytics-plugin/releases/download/2.15.0/googleAnalytics-2.15.0.zip"]
