--- a/.github/workflows/os-osd-deployment-scheduled.yml
+++ b/.github/workflows/os-osd-deployment-scheduled.yml
@@ -7,13 +7,13 @@ on:
   workflow_dispatch:
   # Adds schdeule event trigger for daily reset.
   # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#schedule
-  schedule:
-    # Run daily at 04:30 UTC.
-    - cron:  '30 04 * * *'
+  # schedule:
+  #   # Run daily at 04:30 UTC.
+  #   - cron:  '30 04 * * *'
 jobs:
 
   OS-OSD-Preview-Scheduled-Deployment:
-    uses: opensearch-project/dashboards-anywhere/.github/workflows/deployment-template.yml@main
+    uses: opensearch-project/dashboards-anywhere/.github/workflows/deployment-template.yml@release-218
     with:
       helm-repo: https://opensearch-project.github.io/helm-charts/
       deploy-env: preview
@@ -32,49 +32,9 @@ jobs:
       otel_root_ca: ${{ secrets.OTEL_ROOT_CA }}
       otel_data_prepper_cert: ${{ secrets.OTEL_DATA_PREPPER_CERT }}
       kibanaserver: ${{ secrets.KIBANASERVER }}
-
-  OS-OSD-SearchApps-Scheduled-Deployment:
-    uses: opensearch-project/dashboards-anywhere/.github/workflows/deployment-template.yml@main
-    with:
-      helm-repo: https://opensearch-project.github.io/helm-charts/
-      deploy-env: searchapps
-    secrets:
-      access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_SEARCHAPPS }}
-      secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_SEARCHAPPS }}
-      region: ${{ secrets.AWS_REGION_SEARCHAPPS }}
-      kube-config: ${{ secrets.KUBE_CONFIG_DATA_SEARCHAPPS }}
-      openid_client_id: ${{ secrets.OPENID_CLIENT_ID_SEARCHAPPS }}
-      openid_client_secret: ${{ secrets.OPENID_CLIENT_SECRET_SEARCHAPPS }}
-      openid_base_redirect_url: ${{ secrets.OPENID_BASE_REDIRECT_URL_SEARCHAPPS }}
-      openid_logout_url: ${{ secrets.OPENID_LOGOUT_URL_SEARCHAPPS }}
-      ga-tracking-id: ${{ secrets.GA_TRACKING_ID }}
-      osd_user: ${{ secrets.OSD_USER_SEARCHAPPS }}
-      osd_user_password: ${{ secrets.OSD_USER_PASSWORD_SEARCHAPPS }}
-      otel_root_ca: ${{ secrets.OTEL_ROOT_CA }}
-      otel_data_prepper_cert: ${{ secrets.OTEL_DATA_PREPPER_CERT }}
-      kibanaserver: ${{ secrets.KIBANASERVER }}
-
-  OS-OSD-Observability-Scheduled-Deployment:
-    uses: opensearch-project/dashboards-anywhere/.github/workflows/deployment-template.yml@main
-    with:
-      helm-repo: https://opensearch-project.github.io/helm-charts/
-      deploy-env: observability
-    secrets:
-      access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_OBSERVABILITY }}
-      secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_OBSERVABILITY }}
-      region: ${{ secrets.AWS_REGION_OBSERVABILITY }}
-      kube-config: ${{ secrets.KUBE_CONFIG_DATA_OBSERVABILITY }}
-      openid_client_id: ${{ secrets.OPENID_CLIENT_ID_OBSERVABILITY }}
-      openid_client_secret: ${{ secrets.OPENID_CLIENT_SECRET_OBSERVABILITY }}
-      openid_base_redirect_url: ${{ secrets.OPENID_BASE_REDIRECT_URL_OBSERVABILITY }}
-      openid_logout_url: ${{ secrets.OPENID_LOGOUT_URL_OBSERVABILITY }}
-      ga-tracking-id: ${{ secrets.GA_TRACKING_ID }}
-      osd_user: ${{ secrets.OSD_USER_OBSERVABILITY }}
-      osd_user_password: ${{ secrets.OSD_USER_PASSWORD_OBSERVABILITY }}
-      otel_root_ca: ${{ secrets.OTEL_ROOT_CA }}
-      otel_data_prepper_cert: ${{ secrets.OTEL_DATA_PREPPER_CERT }}
-      kibanaserver: ${{ secrets.KIBANASERVER }}
-      query_datasources_master_key: ${{ secrets.QUERY_DATASOURCES_MASTER_KEY }}
+      esnode_cert: ${{ secrets.ESNODE_CERT }}
+      esnode_key_cert: ${{ secrets.ESNODE_KEY_CERT }}
+      root_ca_cert: ${{ secrets.ROOT_CA_CERT }}
 
   OSD-Functional-Test-Preview:
     needs: OS-OSD-Preview-Scheduled-Deployment
@@ -84,21 +44,3 @@ jobs:
     secrets:
       osd-user: ${{ secrets.OSD_USER_PREVIEW }}
       osd-user-password: ${{ secrets.OSD_USER_PASSWORD_PREVIEW }}
-
-  OSD-Functional-Test-SearchApps:
-    needs: OS-OSD-SearchApps-Scheduled-Deployment
-    uses: opensearch-project/dashboards-anywhere/.github/workflows/functional-test-template.yml@searchapps
-    with:
-      endpoint: https://searchapps.playground.opensearch.org
-    secrets:
-      osd-user: ${{ secrets.OSD_USER_SEARCHAPPS }}
-      osd-user-password: ${{ secrets.OSD_USER_PASSWORD_SEARCHAPPS }}
-
-  OSD-Functional-Test-Observability:
-    needs: OS-OSD-Observability-Scheduled-Deployment
-    uses: opensearch-project/dashboards-anywhere/.github/workflows/functional-test-template.yml@observability
-    with:
-      endpoint: https://observability.playground.opensearch.org
-    secrets:
-      osd-user: ${{ secrets.OSD_USER_OBSERVABILITY }}
-      osd-user-password: ${{ secrets.OSD_USER_PASSWORD_OBSERVABILITY }}
