--- a/config/playground/helm/preview/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/preview/helm-opensearch-dashboards.yaml
@@ -11,7 +11,7 @@ replicaCount: 3
 image:
   repository: "opensearchproject/opensearch-dashboards"
   # override image tag, which is .Chart.AppVersion by default
-  tag: "latest"
+  tag: "2.17.0"
   pullPolicy: "Always"
 
 imagePullSecrets: []
@@ -201,4 +201,4 @@ extraObjects: []
 # specify the external plugins to install
 plugins:
   enabled: true
-  installList: ["https://github.com/BionIT/google-analytics-plugin/releases/download/2.18.0/googleAnalytics-2.18.0.zip"]
+  installList: ["https://github.com/BionIT/google-analytics-plugin/releases/download/2.17.0/googleAnalytics-2.17.0.zip"]
