use new homepage
Signed-off-by: Tao Liu <liutaoaz@amazon.com>

--- a/config/playground/helm/preview/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/preview/helm-opensearch-dashboards.yaml
@@ -131,7 +131,7 @@ config:
         "query:enhancements:enabled": true
         "query:dataSource:readOnly": false
         "query:dataSourceReadOnly": false
-        # "home:useNewHomePage": true
+        "home:useNewHomePage": true
 
     # Workspace
     workspace.enabled: true
